; ModuleID = '/home/carl/AnghaBench/linux/arch/mips/sni/extr_reset.c_sni_machine_restart.c'
source_filename = "/home/carl/AnghaBench/linux/arch/mips/sni/extr_reset.c_sni_machine_restart.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sni_machine_restart(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %4 = call i32 (...) @local_irq_disable()
  br label %5

5:                                                ; preds = %17, %1
  store i32 0, i32* %3, align 4
  br label %6

6:                                                ; preds = %14, %5
  %7 = load i32, i32* %3, align 4
  %8 = icmp slt i32 %7, 100
  br i1 %8, label %9, label %17

9:                                                ; preds = %6
  %10 = call i32 (...) @kb_wait()
  %11 = call i32 @udelay(i32 50)
  %12 = call i32 @outb_p(i32 254, i32 100)
  %13 = call i32 @udelay(i32 50)
  br label %14

14:                                               ; preds = %9
  %15 = load i32, i32* %3, align 4
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* %3, align 4
  br label %6

17:                                               ; preds = %6
  br label %5
}

declare dso_local i32 @local_irq_disable(...) #1

declare dso_local i32 @kb_wait(...) #1

declare dso_local i32 @udelay(i32) #1

declare dso_local i32 @outb_p(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
